crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_unique_snapshot@composite_unique_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const compositeUnique = pgTable("composite_unique", {
  id: integer("id").primaryKey(),
  tenantId: integer("tenant_id").notNull(),
  name: text("name").notNull(),
}, (t) => [
  uniqueIndex("uq_composite_unique__uq_tenant_name").on(t.tenantId, t.name),
]);
