crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_unique_snapshot@composite_unique_Jpa.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
import jakarta.persistence.*;

@Entity
@Table(name = "composite_unique", uniqueConstraints = {
    @UniqueConstraint(name = "uq_tenant_name", columnNames = {"tenant_id", "name"})
})
public class CompositeUnique {

    @Id
    @Column(name = "id")
    private Integer id;

    @Column(name = "tenant_id", nullable = false)
    private Integer tenantId;

    @Column(name = "name", nullable = false, columnDefinition = "TEXT")
    private String name;

    protected CompositeUnique() {
    }
}
