crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_unique_snapshot@composite_unique_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlmodel import Field, SQLModel
from sqlalchemy import UniqueConstraint


class CompositeUnique(SQLModel, table=True):
    __tablename__ = "composite_unique"

    id: int = Field(primary_key=True)
    tenant_id: int = Field(...)
    name: str = Field(...)

    __table_args__ = (
        UniqueConstraint("tenant_id", "name", name="uq_tenant_name"),
    )
